fix dark mode navbar

--- a/src/index.css
+++ b/src/index.css
@@ -195,6 +195,7 @@ li {
   top: 0;
   right: 0;
   padding-right: 10px;
+  z-index: 2;
 }
 
 .top-navbar-darkmode ul {
@@ -680,6 +681,15 @@ li {
   .top-icon:hover {
     filter: drop-shadow(0 0 10px #ffffff);
     color: rgba(255, 255, 255, 0.7);
+  }
+
+  .banner-title {
+    height: 50vh;
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 120px;
+    text-align: center;
+    position: absolute;
   }
 
 
